# haffman_algorithm

./: .gitignore  CMakeLists.txt  README.md  compiler.bat  main.cpp
include/: haffman.hpp
lib/: CMakeLists.txt  HaffmanLib.lib
src/: haffman.cpp
src_haffman/: haffman.cpp  haffman.h  main.cpp
